# ffmpeg-core

./: CMakeLists.txt  ffmpeg.patch
.github/workflows/: build.yml
